...
            android:layout_height="wrap_content"
            android:id="@+id/constraint"
            android:paddingBottom="16dp"
            android:layout_below="@id/date_score">

            <TextView
                android:id="@+id/small_description"
                android:layout_width="match_parent"
                android:transitionName="desc"
                android:layout_height="wrap_content"
                android:maxLines="6"
                android:minLines="1"
                android:text="@string/desc"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/libre_franklin_light"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/read_more_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
...
