...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/article_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/libre_franklin_light"
                android:gravity="center"
                android:padding="8dp"
                android:text="Title"
...
